[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfckd"
version = "0.0.0.dev1"
description = "A Python library for NFC tag writing and key derivation"
readme = "README.md"
authors = [
    { name = "Zears14" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
license = { file = "LICENSE" }
dependencies = [
    "cryptography>=45.0.5",
    "nfcpy>=1.0.4",
    "loguru>=0.7.3"
]

[tool.hatch.build]
packages = ["nfckd"]
