[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfckd"
version = "0.0.0.dev1"
description = "A Python library for NFC tag writing and key derivation"
readme = "README.md"
authors = [
    { name = "Zears14" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
license = { file = "LICENSE" }
dependencies = [
    "cryptography>=45.0.5",
    "nfcpy>=1.0.4",
    "loguru>=0.7.3"
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["dist", ".venv"]
include = ["nfckd/*.py"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "E501"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"


[tool.hatch.build]
packages = ["nfckd"]

[tool.hatch.envs.default.scripts]
lint = "ruff check . --fix"
format = [
    "ruff format . --check",
    "ruff check . --fix"
]

