[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfckd"
dynamic = ["version"]
description = "A Python library for NFC tag writing and key derivation"
readme = "README.md"
authors = [
    { name = "Zears14" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
license = { file = "LICENSE" }
dependencies = [
    "cryptography>=45.0.5",
    "nfcpy>=1.0.4",
    "loguru>=0.7.3"
]

[project.urls]
Repository = "https://github.com/Zears14/nfckd"
Issues = "https://github.com/Zears14/nfckd/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["dist", ".venv"]
include = ["nfckd/*.py"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "E501"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.hatch.build]
packages = ["nfckd"]

[tool.hatch.envs.default.scripts]
lint = "ruff check . --fix"
format = [
    "ruff format .",
    "ruff check . --fix"
]

[tool.hatch.version]
path = "nfckd/__init__.py"
